# CG-A4

./: .gitignore  README.md
assignment4/raycaster/: CMakeLists.txt  README.md  build.sh
assignment4/raycaster/src/: raycaster.cpp
assignment4/raycaster/src/shaders/: rayCaster.frag  transferFunction.frag  transferFunction.vert
